@@ -27,19 +27,18 @@
  ***********************************************************************************/
 package com.projectswg.holocore.test_resources;
 
-import com.projectswg.common.data.swgfile.visitors.ObjectData.ObjectDataAttribute;
 import com.projectswg.common.network.packets.SWGPacket;
-import com.projectswg.holocore.intents.object.ObjectCreatedIntent;
-import com.projectswg.holocore.resources.containers.ContainerPermissionsType;
-import com.projectswg.holocore.resources.objects.GameObjectType;
-import com.projectswg.holocore.resources.objects.SWGObject;
-import com.projectswg.holocore.resources.objects.creature.CreatureObject;
-import com.projectswg.holocore.resources.objects.player.PlayerObject;
-import com.projectswg.holocore.resources.objects.tangible.TangibleObject;
-import com.projectswg.holocore.resources.player.Player;
-import com.projectswg.holocore.resources.player.PlayerState;
+import com.projectswg.holocore.resources.support.objects.permissions.ContainerPermissionsType;
+import com.projectswg.holocore.resources.support.objects.GameObjectType;
+import com.projectswg.holocore.resources.support.objects.swg.SWGObject;
+import com.projectswg.holocore.resources.support.objects.swg.creature.CreatureObject;
+import com.projectswg.holocore.resources.support.objects.swg.player.PlayerObject;
+import com.projectswg.holocore.resources.support.objects.swg.tangible.TangibleObject;
+import com.projectswg.holocore.resources.support.global.player.Player;
+import com.projectswg.holocore.resources.support.global.player.PlayerState;
 
-import java.util.List;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.concurrent.atomic.AtomicLong;
 
 public class GenericCreatureObject extends CreatureObject {
@@ -77,15 +76,15 @@ public class GenericCreatureObject extends CreatureObject {
 	}
 	
 	public void setupAsCharacter() {
-		for (String slotName : List.of("inventory", "datapad", "hangar", "default_weapon", "mission_bag", "hat", "hair", "earring_r", "earring_l", "eyes", "mouth", "neck", "cloak", "back", "chest1", "chest2", "chest3_r", "chest3_l", "bicep_r", "bicep_l", "bracer_lower_r", "bracer_upper_r", "bracer_lower_l", "bracer_upper_l", "wrist_r", "wrist_l", "gloves", "hold_r", "hold_l", "ring_r", "ring_l", "utility_belt", "pants1", "pants2", "shoes", "ghost", "bank", "appearance_inventory", "cybernetic_hand_l", "cybernetic_hand_r")) {
+		for (String slotName : Arrays.asList("inventory", "datapad", "hangar", "default_weapon", "mission_bag", "hat", "hair", "earring_r", "earring_l", "eyes", "mouth", "neck", "cloak", "back", "chest1", "chest2", "chest3_r", "chest3_l", "bicep_r", "bicep_l", "bracer_lower_r", "bracer_upper_r", "bracer_lower_l", "bracer_upper_l", "wrist_r", "wrist_l", "gloves", "hold_r", "hold_l", "ring_r", "ring_l", "utility_belt", "pants1", "pants2", "shoes", "ghost", "bank", "appearance_inventory", "cybernetic_hand_l", "cybernetic_hand_r")) {
 			setSlot(slotName, null);
 		}
 		
-		setArrangement(List.of(List.of("rider")));
+		setArrangement(Collections.singletonList(Collections.singletonList("rider")));
 		setGameObjectType(GameObjectType.GOT_CREATURE_CHARACTER);
 		
 		PlayerObject playerObject = new PlayerObject(-getObjectId());
-		playerObject.setArrangement(List.of(List.of("ghost")));
+		playerObject.setArrangement(Collections.singletonList(Collections.singletonList("ghost")));
 		playerObject.moveToContainer(this);
 		createInventoryObject("inventory");
 		createInventoryObject("datapad");
@@ -103,7 +102,7 @@ public class GenericCreatureObject extends CreatureObject {
 	
 	private void createInventoryObject(String slot) {
 		SWGObject obj = new TangibleObject(GENERATED_IDS.incrementAndGet());
-		obj.setArrangement(List.of(List.of(slot)));
+		obj.setArrangement(Collections.singletonList(Collections.singletonList(slot)));
 		obj.setContainerPermissions(ContainerPermissionsType.INVENTORY);
 		obj.moveToContainer(this);
 	}
